--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,13 @@ env:
   matrix:
     - MONO_VERSION="3.10.0"
 
+git:
+  # we need recursive init
+  submodules: false
+
+before_install:
+  - git submodule update --init --recursive
+
 install:
   # Fetch Mono
   - wget "http://download.mono-project.com/archive/${MONO_VERSION}/macos-10-x86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
