--- a/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
+++ b/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
@@ -113,6 +113,7 @@
     <Compile Include="ConfigureWindow.Designer.cs">
       <DependentUpon>ConfigureWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="CplControl.cs" />
     <Compile Include="ExchangeTransportServiceWindow.cs">
       <SubType>Form</SubType>
     </Compile>
