Fixed build for older Exchange versions

--- a/.gitignore
+++ b/.gitignore
@@ -111,8 +111,6 @@ UpgradeLog*.XML
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.xml
 
 /Src/Configuration.DkimSigner/bin/Debug *
-/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe*
-/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe
-/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe.manifest
+/Src/Configuration.DkimSigner/bin/Release
 /cov-int
 /cov-int.zip
