--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,13 @@ script:
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 Preview"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 RTM"
 - xbuild DkimSigner.sln /p:Configuration="Release"
+
+#addons:
+#  coverity_scan:
+#    project:
+#      name: "Pro/dkim-exchange"
+#      description: "Build submitted via Travis CI"
+#    notification_email: git@s.profanter.me
+#    build_command_prepend: "xbuild /t:CleanAll travis.proj"
+#    build_command:   "xbuild /t:Build travis.proj"
+#    branch_pattern: coverity_scan
