Readded binary files needed for installation

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,8 @@ UpgradeLog*.XML
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.xml
 
 /Src/Configuration.DkimSigner/bin/Debug *
-/Src/Configuration.DkimSigner/bin/Release
+/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe*
+/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe
+/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe.manifest
 /cov-int
 /cov-int.zip
